<resources>
    <string name="app_name">Virtual ACCESStant</string>
    <string name="nameOfApp">RAM</string>
    <string name="greetingsOneText">Welcome!</string>
    <string name="greetingsTwoText">I am RAM</string>
    <string name="login">Log In</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>

    <string name="nameString">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="take_a_look">Take a look</string>
    <string name="download_activity">Go to download activity</string>
    <string name="chat">Chat</string>
    <string name="book">Book</string>
    <string name="download">Download</string>

    <string name="you_can_chat">You can chat RAM</string>
    <string name="download_textview">Download your files here</string>
    <string name="book_of_ram">Read this book and be enlightened</string>

    <string name="second_you_can_chat">Chat RAM for your concern</string>
    <string name="second_download_textview">Click and Download your files</string>
    <string name="second_book_of_ram">It will give you knowledge</string>
    <string name="book_of_knowledge">Book of Knowledge</string>

    <string name="active_now">● Active Now</string>
    <string name="type_something">Type something here...</string>
    <string name="chat_bot_chat">Greetings</string>
    <string name="user_chat">Hello</string>

    <string name="no_files">No files in here.</string>
    <string name="please_wait">Please Wait </string>
    <string name="download_completed">Download Completed</string>

    <string name="add_keywords">Add Keywords</string>
    <string name="keyword">Keyword</string>
    <string name="description">Description</string>
    <string name="add_reply">Add Replies</string>
    <string name="reply">Reply</string>
    <string name="add">Add</string>

    <string name="exit_dialog">X</string>

</resources>